--- a/rootfs/config/supervisor/5-chromium.conf
+++ b/rootfs/config/supervisor/5-chromium.conf
@@ -1,5 +1,5 @@
 [program:Chromium]
-command=bash -c '/opt/chrome-linux/chrome --no-sandbox --test-type --disable-dev-shm-usage --start-maximized'
+command=bash -c '/usr/bin/google-chrome --no-sandbox --test-type --disable-dev-shm-usage --start-maximized --remote-debugging-port=19222'
 priority=5
 autorestart=true
 stderr_logfile=/var/log/chromium.err.log
